--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     build: ./frontend
     ports:
       - "5173:5173"
+    env_file:
+      - ./frontend/.env
     networks:
       - mern
     depends_on:
