--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-swipeable": "^7.0.2",
     "react-use-cart": "^1.14.0",
     "tailwindcss": "^4.1.11"
   },
