--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,9 @@ MONGO_URI = mongodb+srv://admin:admin@cluster0.fnhtfur.mongodb.net/
 CLOUDINARY_CLOUD_NAME=dzhnrhc0i
 CLOUDINARY_API_KEY=254248133519568
 CLOUDINARY_API_SECRET=-UhjIlkPB9ep2AiAJ5Assh5c280
+
+
+STORE_ID=meigl68b58acd6a026
+STORE_PASSWORD=meigl68b58acd6a026@ssl
+BASE_URL=https://flat-tamra-crazyboyyzn-50f0f41e.koyeb.app
+FRONTEND_URL=https://meiglow.vercel.app
