changes multiple add file to single file

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,5 @@ STORE_ID=meigl68b58acd6a026
 STORE_PASSWORD=meigl68b58acd6a026@ssl
 BASE_URL=https://flat-tamra-crazyboyyzn-50f0f41e.koyeb.app
 FRONTEND_URL=https://meiglow.vercel.app
+
+ADMIN_EMAILS=mdyasinahmed@gmail.com,meiglowworld@gmail.com
